<resources>
    <string name="app_name">Light Notes</string>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shopping_list">My Lists</string>
    <string name="new_item">New Item</string>
    <string name="et_title_hint">Title</string>
    <string name="et_description_hint">Description</string>
    <string name="new_list_name_hint">New list</string>
    <string name="new_list_name">New List Title</string>
    <string name="btn_new_shop_list">Create List</string>
    <string name="delete_item2">Do you want to delete this item?</string>
    <string name="delete_item1">Delete</string>
    <string name="delete_confirm_button">Confirm</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="button_update">Update</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="new_shop_list_item">New item</string>
    <string name="empty">Empty</string>
    <string name="edit_item_list">Edit list</string>
    <string name="hint_list_name">Name</string>
    <string name="hint_info">Additional info</string>
    <string name="button_done">Done</string>
    <string name="general">General</string>
    <string name="choose_note_style">Note Style</string>
    <string name="choose_time_format">Date Format</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_summary">Remove Ads</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="appearance_settings">Appearance</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="note_text_settings">Note Text Settings</string>
    <string name="note_text_size">Note Text Size</string>
    <string name="title_text_size">Title Text Size</string>
    <string name="create_your_list">Create your lists here</string>
    <string name="create_your_note">Create your notes here</string>

</resources>