<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory android:title="@string/general"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <ListPreference
            android:defaultValue="Grid"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_note_style"
            android:key="note_style_key"
            android:title="@string/choose_note_style"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="kk:mm:ss - dd/MM/yyyy"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_time_clock"
            android:key="time_format_key"
            android:title="@string/choose_time_format"
            app:useSimpleSummaryProvider="true" />


<!--        <Preference-->
<!--            android:title="@string/remove_ads"-->
<!--            android:key="remove_ads_key"-->
<!--            android:icon="@drawable/ic_remove_ads"-->
<!--            />-->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/appearance_settings">

        <ListPreference
            android:defaultValue="Light"
            android:entries="@array/theme_array"
            android:entryValues="@array/theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_dark_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/choose_theme" />



    </PreferenceCategory>

    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="note_text_size_key"
            android:icon="@drawable/ic_font"
            app:useSimpleSummaryProvider="true"
            android:title="@string/note_text_size" />

        <ListPreference
            android:defaultValue="20"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_text_size_key"
            android:icon="@drawable/ic_title_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_size" />



    </PreferenceCategory>


</PreferenceScreen>