<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_margin="4dp"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_item_list"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_list_name"
                android:textColorHint="@color/grey"/>
            <EditText
                android:id="@+id/et_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_info"
                android:textColorHint="@color/grey"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_done"
                android:layout_marginTop="4dp"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="18sp" />


        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>