<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_margin="4dp"
        app:strokeWidth="0dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_list_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_new_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_list_name_hint"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_new_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_new_shop_list"
                android:textSize="20sp"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>